fixed list markers vertical alignment

--- a/src/scss/obsidian/lists.scss
+++ b/src/scss/obsidian/lists.scss
@@ -7,7 +7,7 @@ body {
 	--list-bullet-border: none;
 	--list-bullet-radius: 0;
 	--list-bullet-size: 4px;
-	--list-bullet-transform: translateY(1px);
+	--list-bullet-transform: none;
 }
 
 body {
